<resources>
	<string name="portrom_choosefile">Preparing</string>
	<string name="portrom_running">Running</string>
	<string name="pmfilepath">Transplant program</string>
	<string name="hello_ui">UI</string>
	<string name="hello_core">Core</string>
	<string name="hello_service">Service</string>
	<string name="next">Next</string>
	<string name="format_data">Format data</string>
	<string name="format_system">Format system</string>
	<string name="exit">Exit</string>
	<string name="update_success">ROM-IDE has been updated</string>
	<string name="unknown">Unknown</string>
	<string name="last_version">Last Version:</string>
	<string name="cur_version">Current Version:</string>
	<string name="update_log">Update info:</string>
	<string name="sure_exit">Are you really want to exit?</string>
	<string name="exit_msg">.</string>
	<string name="developing">Please wait</string>
	<string name="download_truly">Download ROM-IDE</string>
	<string name="warning">Warning</string>
	<string name="error">Error</string>
	<string name="nodata_dir">Cannot find /sdcard/ROM-IDE !</string>
	<string name="isnot_truly_apk">您下载的是被二次打包后的apk，可能经过恶意修改，会对您的设备造成威胁！请在正规网站下载！</string>
	<string name="cannot_download">Cannot open browser</string>
	<string name="main_romteach">ROM Helper</string>
	<string name="ide_title_rule">Rule</string>
	<string name="ide_title_buildprop">Build.prop Editor</string>
	<string name="ide_title_portboot">Port Boot</string>
	<string name="ide_title_portrom">Port ROM</string>
	<string name="ide_title_terminal">Terminal Emulator</string>
	<string name="ide_title_more">More</string>
	<string name="ide_title_gui">Main</string>
	<string name="ide_title_signer">Signer</string>
	<string name="ide_title_install">Install Environment</string>
	<string name="ide_title_plugin">Plugin Manager</string>
	<string name="ide_title_apktool">Apktool</string>
	<string name="ide_title_about">About ROM-IDE</string>
	<string name="ide_title_editor">Text Editor</string>
	<string name="ide_title_preference">Preference</string>
	<string name="ide_title_portmethodmgr">Port Manager</string>
	<string name="ide_title_workspace">ROM Workspace</string>
	<string name="ide_title_wkcreatenew">Create New ROM</string>
	<string name="ide_title_filemanager">File Manager</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ide_splash_romes">Bron to ROM</string>
	<string name="ide_terminal_type_idecommand">Input ROM-IDE Command</string>
	<string name="ide_terminal_send">Send</string>
	<string name="browser_find">Find</string>
	<string name="base_file_path">Base File Path</string>
	<string name="sam_file_path">Sample File Path</string>
	<string name="other_options">Other Options</string>
	<string name="cpu">CPU Type</string>
	<string name="cpu_mtk">MTK</string>
	<string name="cpu_gt">Qualcomm</string>
	<string name="cpu_sc">Spreadtrum</string>
	<string name="port_start">Port!</string>
	<string name="no_open_file_clickme">No Open(Click Me)</string>
	<string name="no_open_file">No Open</string>
	<string name="sign_start">Sign!</string>
	<string name="input_file_path">Input File Path</string>
	<string name="output_file_path">Output File Path</string>
	<string name="no_open_project">No Opening Project</string>
	<string name="rom_location">at /sdcard/ROM-Workspace</string>
	<string name="rom_name">Name</string>
	<string name="rom_another">Author</string>
	<string name="rom_version">Version</string>
	<string name="rom_dump_system">Dump system from current system</string>
	<string name="rom_tar">Dont Compress (tar)</string>
	<string name="rom_gz">Use gzip (gz)</string>
	<string name="rom_bz2">Use bzip (bz2)</string>
	<string name="rom_useboot">Use boot.img</string>
	<string name="rom_create">Create ROM</string>
	<string name="rom_apply">Apply</string>
	<string name="settings_key_auto_backup">Auto-backup</string>
	<string name="settings_key_auto_close_clipboard">Auto-close clipboard</string>
	<string name="settings_key_auto_display_keyboard">Auto-display keyboard</string>
	<string name="settings_key_auto_indent">Auto-indent</string>
	<string name="settings_key_auto_open_clipboard">Auto-open clipboard</string>
	<string name="settings_key_chirality">Chirality</string>
	<string name="settings_key_color_scheme">Color scheme</string>
	<string name="settings_key_drag_select">Drag select</string>
	<string name="settings_key_file_input_format">File input encoding</string>
	<string name="settings_key_file_output_format">File output encoding</string>
	<string name="settings_key_font">Font</string>
	<string name="settings_key_highlight_current_row">Underline current row</string>
	<string name="settings_key_line_terminator_style">Line terminator style</string>
	<string name="settings_key_long_press_capitalize">Long-press caps</string>
	<string name="settings_key_navigation_method">Cursor navigation</string>
	<string name="settings_key_show_nonprinting">Show non-printing symbols</string>
	<string name="settings_key_show_row_number">Show current row number</string>
	<string name="settings_key_syntax_color">Syntax coloring</string>
	<string name="settings_key_tab_spaces">Tab width</string>
	<string name="settings_key_word_wrap">Word wrap</string>
	<string name="settings_key_zoom_size">Zoom \u0025</string>
	<string name="settings_chirality_left">Left</string>
	<string name="settings_chirality_right">Right</string>
	<string-array
		name="settings_entry_values_chirality">
		<item>@string/settings_chirality_right</item>
		<item>@string/settings_chirality_left</item>
	</string-array>
	<string name="settings_color_scheme_light">Light</string>
	<string name="settings_color_scheme_dark">Dark</string>
	<string name="settings_color_scheme_solarized_light">Solarized Light</string>
	<string name="settings_color_scheme_solarized_dark">Solarized Dark</string>
	<string name="settings_color_scheme_obsidian">Obsidian</string>
	<string-array
		name="settings_entry_values_color_scheme">
		<item>@string/settings_color_scheme_light</item>
		<item>@string/settings_color_scheme_dark</item>
		<item>@string/settings_color_scheme_solarized_light</item>
		<item>@string/settings_color_scheme_solarized_dark</item>
		<item>@string/settings_color_scheme_obsidian</item>
	</string-array>
	<string name="settings_font_sans_serif">Sans_serif</string>
	<string name="settings_font_serif">Serif</string>
	<string name="settings_font_monospace">Monospace</string>
	<string name="settings_font_bitstream_vera">Bitstream Vera</string>
	<string name="settings_font_proggy_clean">Proggy Clean</string>
	<string-array
		name="settings_entry_values_font">
		<item>@string/settings_font_sans_serif</item>
		<item>@string/settings_font_serif</item>
		<item>@string/settings_font_monospace</item>
		<item>@string/settings_font_bitstream_vera</item>
		<item>@string/settings_font_proggy_clean</item>
	</string-array>
	<string name="settings_navigation_method_basic">Basic</string>
	<string name="settings_navigation_method_trackpad">Trackpad</string>
	<string name="settings_navigation_method_yoyo">Yo-yo</string>
	<string name="settings_navigation_method_liquid">Liquid</string>
	<string name="settings_navigation_method_vol_keys">Volume keys</string>
	<string-array
		name="settings_entry_values_navigation_method">
		<item>@string/settings_navigation_method_basic</item>
		<item>@string/settings_navigation_method_trackpad</item>
		<item>@string/settings_navigation_method_yoyo</item>
		<item>@string/settings_navigation_method_liquid</item>
		<item>@string/settings_navigation_method_vol_keys</item>
	</string-array>
	<string name="settings_syntax_none">None</string>
	<string name="settings_syntax_c">C</string>
	<string name="settings_syntax_cpp">C++</string>
	<string name="settings_syntax_csharp">C#</string>
	<string name="settings_syntax_java">Java</string>
	<string name="settings_syntax_javascript">JavaScript</string>
	<string name="settings_syntax_objc">Objective-C</string>
	<string name="settings_syntax_php">PHP</string>
	<string name="settings_syntax_python">Python</string>
	<string name="settings_syntax_ruby">Ruby</string>
	<string-array
		name="settings_entry_values_syntax_color">
		<item>@string/settings_syntax_none</item>
		<item>@string/settings_syntax_c</item>
		<item>@string/settings_syntax_cpp</item>
		<item>@string/settings_syntax_csharp</item>
		<item>@string/settings_syntax_java</item>
		<item>@string/settings_syntax_javascript</item>
		<item>@string/settings_syntax_objc</item>
		<item>@string/settings_syntax_php</item>
		<item>@string/settings_syntax_python</item>
		<item>@string/settings_syntax_ruby</item>
	</string-array>
	<string-array
		name="settings_entry_values_tab_spaces">
		<item>1</item>
		<item>2</item>
		<item>4</item>
		<item>8</item>
		<item>16</item>
	</string-array>
	<string-array
		name="settings_entry_values_zoom_size">
		<item>50</item>
		<item>75</item>
		<item>100</item>
		<item>125</item>
		<item>150</item>
		<item>200</item>
		<item>400</item>
	</string-array>
	<string name="dialog_confirm_overwrite">Another file with the same name already exists. Replace existing file?</string>
	<string name="dialog_prompt_save">Save changes to file?</string>
	<string name="dialog_file_save_success">File saved</string>
	<string name="dialog_find_no_results">No results found</string>
	<string name="dialog_replace_all_result">Replacements:\u0020</string>
	<string name="dialog_replace_no_selection">No selected text to replace</string>
	<string name="dialog_go_to_line">Go to line</string>
	<string name="dialog_go_to_line_text_hint">Line number</string>
	<string name="dialog_recent_files">@string/menu_recent_files</string>
	<string name="dialog_recent_files_none">There are no recent files.</string>
	<string name="dialog_statistics">Properties</string>
	<string name="dialog_statistics_words">Words</string>
	<string name="dialog_statistics_chars">Characters</string>
	<string name="dialog_statistics_no_whitespace">Characters (excluding spaces)</string>
	<string name="dialog_statistics_rows">Lines (without word wrap)</string>
	<string name="dialog_statistics_format">Original encoding</string>
	<string name="dialog_statistics_line_terminator_style">Original line terminator style</string>
	<string name="dialog_about">About TextWarrior</string>
	<string name="dialog_button_discard">Discard</string>
	<string name="dialog_button_overwrite">Replace</string>
	<string name="dialog_button_go_back">Go back</string>
	<string name="dialog_button_save">@string/menu_save</string>
	<string name="dialog_button_save_different_name">Save as another file</string>
	<string name="dialog_error_file_open">Error opening file:\u0020</string>
	<string name="dialog_error_file_save">Error saving file:\u0020</string>
	<string name="dialog_error_not_a_file">Chosen name already refers to a directory. Please enter a different name.</string>
	<string name="dialog_error_attempt_overwrite_read_only">Selected file is read-only</string>
	<string name="dialog_error_attempt_overwrite_recovery">File is in a system directory. Saving disabled.</string>
	<string name="dialog_error_no_file_name">File name cannot be empty.</string>
	<string name="dialog_error_file_write_denied">Not allowed to save in the selected directory.</string>
	<string name="dialog_sorry">We\'re sorry.</string>
	<string name="dialog_sorry_force_resume">TextWarrior was forced to close
		by the Android system to conserve resources.</string>
	<string name="dialog_sorry_backup_disabled">Unfortunately, any unsaved 
		changes were lost. Please consider turning on auto-backup in future.</string>
	<string name="dialog_sorry_missing_recovery">A backup was made but it can\'t
		be accessed. Either the backup disk is not available, or the backup was
		deleted by another program.\u000A
		\u000ATry checking \"%1$s\" as soon as possible. Refer to \"Help \u2192 
		Backup and Data Recovery\" for more information.</string>
</resources>