<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="top|center"
	android:padding="10dp"
	android:background="@drawable/main_bg">

	<ImageView
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:src="@drawable/ide_logo_white"
		android:id="@+id/img"/>

	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/sco"
		android:layout_below="@id/img">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:id="@+id/base_layout">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_marginBottom="5dp">

				<EditText
					android:layout_height="wrap_content"
					android:ems="10"
					android:layout_width="wrap_content"
					android:hint="@string/base_file_path"
					android:textColor="#FFFFFF"
					android:maxLines="1"
					android:id="@+id/base_file"
					android:textColorHint="#DFDCDB"/>

				<Button
					android:layout_height="wrap_content"
					android:text="@string/browser_find"
					android:layout_width="wrap_content"
					android:id="@+id/find_base"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_marginBottom="5dp">

				<EditText
					android:layout_height="wrap_content"
					android:ems="10"
					android:layout_width="wrap_content"
					android:hint="@string/sam_file_path"
					android:textColor="#FFFFFF"
					android:maxLines="1"
					android:id="@+id/sam_file"
					android:textColorHint="#DFDCDB"/>

				<Button
					android:layout_height="wrap_content"
					android:text="@string/browser_find"
					android:layout_width="wrap_content"
					android:id="@+id/find_sam"
					android:textColor="#FFFFFF"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal">

				<RadioGroup
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:gravity="center">

					<RadioButton
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/cpu_mtk"
						android:id="@+id/cpu_mtk"
						android:textColor="#FFFFFF"/>

					<RadioButton
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:textColor="#FFFFFF"
						android:text="@string/cpu_gt"
						android:id="@+id/cpu_gt"/>

					<RadioButton
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:textColor="#FFFFFF"
						android:text="@string/cpu_sc"
						android:id="@+id/cpu_sc"/>

				</RadioGroup>

			</LinearLayout>

		</LinearLayout>

	</RelativeLayout>

	<LinearLayout
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:layout_below="@id/sco"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		android:gravity="bottom">

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:gravity="left|center">

			<Button
				android:layout_height="wrap_content"
				android:text="@string/port_start"
				android:layout_width="match_parent"
				android:id="@+id/start"
				android:textColor="#FFFFFF"/>

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>

